@@ -7,6 +7,8 @@ Version 5.1.8
     timed out and was cancelled.  (bug #40091)
   - fixed problem where using respect binary flags would not use the connection char set
     and therefore return strings with a bad encoding.
+  - fixed problem with datetime formatting that causes an extra space to be included between the
+    date and time when sent to the server (bug #41021)
   
 Version 5.1.7 - 8/20/08
  - Fixed problem with DDEX provider that could sometimes prevent table altering when working with
